--- a/ios-developer.html
+++ b/ios-developer.html
@@ -72,7 +72,7 @@
 <p><span class="badge badge-light">Warsaw Warsaw, Poland</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://endios.join.com/jobs/246949-android-developer-m-d-f-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Developer (m/d/f) ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/246949-android-developer-m-d-f-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Developer (m/d/f) ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -156,7 +156,7 @@ Boston, Massachusetts. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://cobibike.recruitee.com/o/ios-developer-fmx-frankfurt-am-main'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cobibike.recruitee.com/o/ios-developer-fmx-frankfurt-am-main'>
       iOS Developer (f/m/x) - COBI.Bike GmbH
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -252,7 +252,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/picsart/1633c0cc-51c5-4067-bfe8-416279b19549'>PicsArt - Senior iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/picsart/1633c0cc-51c5-4067-bfe8-416279b19549'>PicsArt - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -276,7 +276,7 @@ label.</p>
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syone2.recruitee.com/o/ref-4402019-ios-developer'>
+<h5><a href='https://syone2.recruitee.com/o/ref-4402019-ios-developer'>
       (Ref. 440/2019) - iOS Developer - Syone
     </a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
@@ -286,7 +286,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/MPHnecez7q/MaciOS-Application-Developer'>Mac/iOS Application Developer - Latitude, Inc. - Career Page</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/MPHnecez7q/MaciOS-Application-Developer'>Mac/iOS Application Developer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -324,7 +324,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adyen/jobs/538283'>Job Application for iOS Developer  at Adyen</a></h5> 
+<h5><a href='https://boards.greenhouse.io/adyen/jobs/538283'>Job Application for iOS Developer  at Adyen</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -358,7 +358,7 @@ Things?...</p>
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-07-09</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/iSpaceInc/743999691379495-sr-mobile-ios-android-developer'>iSpace, Inc. Sr. Mobile(iOS/Android) Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/iSpaceInc/743999691379495-sr-mobile-ios-android-developer'>iSpace, Inc. Sr. Mobile(iOS/Android) Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -430,7 +430,7 @@ Things?...</p>
 <p>Jun 27, 2019 ... Apply to Senior iOS Developer at Aequilibrium Software Inc. in Vancouver, BC, 
 Canada.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gojek/907aea53-ca2a-49aa-8c89-a78db5f1bec9'>GOJEK - iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/907aea53-ca2a-49aa-8c89-a78db5f1bec9'>GOJEK - iOS Developer</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -450,7 +450,7 @@ Canada.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='http://zigzag.applytojob.com/apply/1QYty9D05A/Senior-IOS-Developer'>Senior iOS Developer - ZigZag Careers - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zigzag.applytojob.com/apply/1QYty9D05A/Senior-IOS-Developer'>Senior iOS Developer - ZigZag Careers - Career Page</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
